WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121962
[sh4] JSValue* exception is unused since
r70703
in JITStackFrame
https://bugs.webkit.org/show_bug.cgi?id=121962
Summary
[sh4] JSValue* exception is unused since r70703 in JITStackFrame
Julien Brianceau
Reported
2013-09-26 10:02:55 PDT
Since
r70703
, the JSValue* exception parameter is a void* unused value in ctiTrampoline function prototype. This is a cosmetic change, but it could avoid people reading sh4 part to waste time to understand why there is a JSValue* here.
Attachments
JSValue* exception is unused since r70703 in sh4 JITStackFrame
(1.30 KB, patch)
2013-09-26 10:12 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-09-26 10:12:40 PDT
Created
attachment 212721
[details]
JSValue* exception is unused since
r70703
in sh4 JITStackFrame
WebKit Commit Bot
Comment 2
2013-09-26 11:08:24 PDT
Comment on
attachment 212721
[details]
JSValue* exception is unused since
r70703
in sh4 JITStackFrame Clearing flags on attachment: 212721 Committed
r156477
: <
http://trac.webkit.org/changeset/156477
>
WebKit Commit Bot
Comment 3
2013-09-26 11:08:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug