[sh4] JSValue* exception is unused since r70703 in JITStackFrame. https://bugs.webkit.org/show_bug.cgi?id=121962

This is a cosmetic change, but it could avoid people reading sh4 part to
waste time to understand why there is a JSValue* here.

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-09-26
Reviewed by Darin Adler.

* jit/JITStubs.h:

Canonical link: https://commits.webkit.org/139982@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156477 268f45cc-cd09-0410-ab3c-d52691b4dbfc